--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/toshyamsundar/command-line-store#readme",
   "dependencies": {
+    "console.table": "^0.10.0",
     "inquirer": "^6.3.1",
     "mysql": "^2.17.1"
   }
